feat: fixing cache and adding folkwiki tunes checker (#22)
