# backend/api/src/main/java/se/dansbart/jooq/Keys.java
@@ -17,6 +17,7 @@ import se.dansbart.jooq.tables.ArtistCrawlLogs;
 import se.dansbart.jooq.tables.Artists;
 import se.dansbart.jooq.tables.DanceMovementFeedback;
 import se.dansbart.jooq.tables.DanceStyleConfig;
+import se.dansbart.jooq.tables.FolkwikiTunes;
 import se.dansbart.jooq.tables.GenreProfiles;
 import se.dansbart.jooq.tables.PendingArtistApprovals;
 import se.dansbart.jooq.tables.PlaybackLinks;
@@ -29,6 +30,7 @@ import se.dansbart.jooq.tables.TrackAlbums;
 import se.dansbart.jooq.tables.TrackArtists;
 import se.dansbart.jooq.tables.TrackDanceStyles;
 import se.dansbart.jooq.tables.TrackFeelVotes;
+import se.dansbart.jooq.tables.TrackFolkwikiMatches;
 import se.dansbart.jooq.tables.TrackPlaybacks;
 import se.dansbart.jooq.tables.TrackStructureVersions;
 import se.dansbart.jooq.tables.TrackStyleVotes;
@@ -58,6 +60,8 @@ public class Keys {
     public static final UniqueKey<Record> _DANCE_MOVE_UC = Internal.createUniqueKey(DanceMovementFeedback.DANCE_MOVEMENT_FEEDBACK, DSL.name("_dance_move_uc"), new TableField[] { DanceMovementFeedback.DANCE_MOVEMENT_FEEDBACK.DANCE_STYLE, DanceMovementFeedback.DANCE_MOVEMENT_FEEDBACK.MOVEMENT_TAG }, true);
     public static final UniqueKey<Record> DANCE_MOVEMENT_FEEDBACK_PKEY = Internal.createUniqueKey(DanceMovementFeedback.DANCE_MOVEMENT_FEEDBACK, DSL.name("dance_movement_feedback_pkey"), new TableField[] { DanceMovementFeedback.DANCE_MOVEMENT_FEEDBACK.ID }, true);
     public static final UniqueKey<Record> DANCE_STYLE_CONFIG_PKEY = Internal.createUniqueKey(DanceStyleConfig.DANCE_STYLE_CONFIG, DSL.name("dance_style_config_pkey"), new TableField[] { DanceStyleConfig.DANCE_STYLE_CONFIG.ID }, true);
+    public static final UniqueKey<Record> FOLKWIKI_TUNES_FOLKWIKI_ID_KEY = Internal.createUniqueKey(FolkwikiTunes.FOLKWIKI_TUNES, DSL.name("folkwiki_tunes_folkwiki_id_key"), new TableField[] { FolkwikiTunes.FOLKWIKI_TUNES.FOLKWIKI_ID }, true);
+    public static final UniqueKey<Record> FOLKWIKI_TUNES_PKEY = Internal.createUniqueKey(FolkwikiTunes.FOLKWIKI_TUNES, DSL.name("folkwiki_tunes_pkey"), new TableField[] { FolkwikiTunes.FOLKWIKI_TUNES.ID }, true);
     public static final UniqueKey<Record> GENRE_PROFILES_PKEY = Internal.createUniqueKey(GenreProfiles.GENRE_PROFILES, DSL.name("genre_profiles_pkey"), new TableField[] { GenreProfiles.GENRE_PROFILES.ID }, true);
     public static final UniqueKey<Record> PENDING_ARTIST_APPROVALS_PKEY = Internal.createUniqueKey(PendingArtistApprovals.PENDING_ARTIST_APPROVALS, DSL.name("pending_artist_approvals_pkey"), new TableField[] { PendingArtistApprovals.PENDING_ARTIST_APPROVALS.ID }, true);
     public static final UniqueKey<Record> UNIQUE_PENDING_ARTIST = Internal.createUniqueKey(PendingArtistApprovals.PENDING_ARTIST_APPROVALS, DSL.name("unique_pending_artist"), new TableField[] { PendingArtistApprovals.PENDING_ARTIST_APPROVALS.SPOTIFY_ID }, true);
@@ -77,6 +81,7 @@ public class Keys {
     public static final UniqueKey<Record> UNIQUE_TRACK_ARTIST = Internal.createUniqueKey(TrackArtists.TRACK_ARTISTS, DSL.name("unique_track_artist"), new TableField[] { TrackArtists.TRACK_ARTISTS.TRACK_ID, TrackArtists.TRACK_ARTISTS.ARTIST_ID }, true);
     public static final UniqueKey<Record> TRACK_DANCE_STYLES_PKEY = Internal.createUniqueKey(TrackDanceStyles.TRACK_DANCE_STYLES, DSL.name("track_dance_styles_pkey"), new TableField[] { TrackDanceStyles.TRACK_DANCE_STYLES.ID }, true);
     public static final UniqueKey<Record> TRACK_FEEL_VOTES_PKEY = Internal.createUniqueKey(TrackFeelVotes.TRACK_FEEL_VOTES, DSL.name("track_feel_votes_pkey"), new TableField[] { TrackFeelVotes.TRACK_FEEL_VOTES.ID }, true);
+    public static final UniqueKey<Record> TRACK_FOLKWIKI_MATCHES_PKEY = Internal.createUniqueKey(TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES, DSL.name("track_folkwiki_matches_pkey"), new TableField[] { TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES.TRACK_ID, TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES.FOLKWIKI_TUNE_ID }, true);
     public static final UniqueKey<Record> TRACK_PLAYBACKS_PKEY = Internal.createUniqueKey(TrackPlaybacks.TRACK_PLAYBACKS, DSL.name("track_playbacks_pkey"), new TableField[] { TrackPlaybacks.TRACK_PLAYBACKS.ID }, true);
     public static final UniqueKey<Record> TRACK_STRUCTURE_VERSIONS_PKEY = Internal.createUniqueKey(TrackStructureVersions.TRACK_STRUCTURE_VERSIONS, DSL.name("track_structure_versions_pkey"), new TableField[] { TrackStructureVersions.TRACK_STRUCTURE_VERSIONS.ID }, true);
     public static final UniqueKey<Record> TRACK_STYLE_VOTES_PKEY = Internal.createUniqueKey(TrackStyleVotes.TRACK_STYLE_VOTES, DSL.name("track_style_votes_pkey"), new TableField[] { TrackStyleVotes.TRACK_STYLE_VOTES.ID }, true);
@@ -104,6 +109,8 @@ public class Keys {
     public static final ForeignKey<Record, Record> TRACK_ARTISTS__TRACK_ARTISTS_TRACK_ID_FKEY = Internal.createForeignKey(TrackArtists.TRACK_ARTISTS, DSL.name("track_artists_track_id_fkey"), new TableField[] { TrackArtists.TRACK_ARTISTS.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
     public static final ForeignKey<Record, Record> TRACK_DANCE_STYLES__TRACK_DANCE_STYLES_TRACK_ID_FKEY = Internal.createForeignKey(TrackDanceStyles.TRACK_DANCE_STYLES, DSL.name("track_dance_styles_track_id_fkey"), new TableField[] { TrackDanceStyles.TRACK_DANCE_STYLES.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
     public static final ForeignKey<Record, Record> TRACK_FEEL_VOTES__TRACK_FEEL_VOTES_TRACK_ID_FKEY = Internal.createForeignKey(TrackFeelVotes.TRACK_FEEL_VOTES, DSL.name("track_feel_votes_track_id_fkey"), new TableField[] { TrackFeelVotes.TRACK_FEEL_VOTES.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
+    public static final ForeignKey<Record, Record> TRACK_FOLKWIKI_MATCHES__TRACK_FOLKWIKI_MATCHES_FOLKWIKI_TUNE_ID_FKEY = Internal.createForeignKey(TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES, DSL.name("track_folkwiki_matches_folkwiki_tune_id_fkey"), new TableField[] { TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES.FOLKWIKI_TUNE_ID }, Keys.FOLKWIKI_TUNES_PKEY, new TableField[] { FolkwikiTunes.FOLKWIKI_TUNES.ID }, true);
+    public static final ForeignKey<Record, Record> TRACK_FOLKWIKI_MATCHES__TRACK_FOLKWIKI_MATCHES_TRACK_ID_FKEY = Internal.createForeignKey(TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES, DSL.name("track_folkwiki_matches_track_id_fkey"), new TableField[] { TrackFolkwikiMatches.TRACK_FOLKWIKI_MATCHES.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
     public static final ForeignKey<Record, Record> TRACK_PLAYBACKS__TRACK_PLAYBACKS_TRACK_ID_FKEY = Internal.createForeignKey(TrackPlaybacks.TRACK_PLAYBACKS, DSL.name("track_playbacks_track_id_fkey"), new TableField[] { TrackPlaybacks.TRACK_PLAYBACKS.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
     public static final ForeignKey<Record, Record> TRACK_STRUCTURE_VERSIONS__TRACK_STRUCTURE_VERSIONS_TRACK_ID_FKEY = Internal.createForeignKey(TrackStructureVersions.TRACK_STRUCTURE_VERSIONS, DSL.name("track_structure_versions_track_id_fkey"), new TableField[] { TrackStructureVersions.TRACK_STRUCTURE_VERSIONS.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
     public static final ForeignKey<Record, Record> TRACK_STYLE_VOTES__TRACK_STYLE_VOTES_TRACK_ID_FKEY = Internal.createForeignKey(TrackStyleVotes.TRACK_STYLE_VOTES, DSL.name("track_style_votes_track_id_fkey"), new TableField[] { TrackStyleVotes.TRACK_STYLE_VOTES.TRACK_ID }, Keys.TRACKS_PKEY, new TableField[] { Tracks.TRACKS.ID }, true);
